fix: вернул фильтр APPROVED в getCommentsEventByUser